// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game renders properly when currentUsername is empty 1`] = `
<CenteredLayout>
  <React.Fragment>
    <h1>
      Join game
    </h1>
    <JoinGameForm
      gameId="gameId"
    />
  </React.Fragment>
</CenteredLayout>
`;

exports[`Game renders properly when currentUsername is present 1`] = `
<CenteredLayout>
  <h1>
    Game
  </h1>
</CenteredLayout>
`;
